6/03/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info, cgdb.txt, cgdb.1: Removed, no more generated files in svn.

6/03/2006 Bob Rossi <bob@brasko.net>

	* cgdb.texinfo: Change cvs to svn.

4/14/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.
	* stamp-vti: Autogenerated.
	* version.texi: Autogenerated.

4/10/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (dist_pkgdata_DATA): Added.
	* Makefile.in: Autogenerated.

version 0.6.2 (04/09/2006):

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (cgdb.1): Manual rule now.
	* Makefile.in: Autogenerated.
	* cgdb.info: Autogenerated.
	* cgdb.texinfo (Building CGDB): Update dependency.

4/05/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.

4/04/2006 Bob Rossi <bob@brasko.net>

	* cgdb.1: Autogenerated.

3/07/2006 Bob Rossi <bob@brasko.net>

	* cgdb.1: Autogenerated.

version 0.6.1 (03/06/2006):

3/06/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info, cgdb.txt, stamp-vti, version.texi: Autogenerated.

3/06/2006 Bob Rossi <bob@brasko.net>

	* cgdb.1: Autogenerated.

2/26/2006 Bob Rossi <bob@brasko.net>

	* cgdb.texinfo (Configuring CGDB): Fix :highlight command.

2/25/2006 Bob Rossi <bob@brasko.net>

	* cgdb.texinfo (Highlighting Groups): Spelling errors.
	* cgdb.info: Autogenerated.

2/25/2006 Bob Rossi <bob@brasko.net>

	* cgdb.texinfo (Highlighting Groups): Added node.
	* cgdb.info: Autogenerated.

2/16/2006 Bob Rossi <bob@brasko.net>

	* cgdb.1: Autogenerated.

2/04/2006 Bob Rossi <bob@brasko.net>

	* cgdb.texinfo (Building CGDB): Add help2man dependency.
	* cgdb.info: Autogenerated.

2/04/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (cgdb.1): Add rule to generate man pages.
	(clean-local): Removed.
	* Makefile.in: Autogenerated.

2/04/2006 Bob Rossi <bob@brasko.net>

	* Makefile.am (dist_man_MANS, EXTRA_DIST): Added.
	* Makefile.in: Autogenerated.

version 0.6.0 (01/30/2006):

1/30/2006 Bob Rossi <bob@brasko.net>

	* cgdb.info: Autogenerated.